<resources>
    <string name="app_name">TaskNest</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create">Register</string>
    <string name="forgot">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="number">Contact Number</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_registered">Enter Your Registered Email</string>
    <string name="reset">Reset Password</string>
    <string name="back_login">Back to Login</string>
    <string name="set_new">Set New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm password</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="register">Register</string>
    <string name="Admin">Admin</string>
    <string name="Home">Home\n</string>
    <string name="complete_tasks">Complete tasks</string>
    <string name="morning_jog">Morning Jog</string>
    <string name="date">Jul 25, 2024</string>
    <string name="date_1">Jul 25, 2024</string>
    <string name="Dinner">Dinner with friends</string>
    <string name="date_2">Jul 25, 2024</string>
    <string name="completed">Mark all as done</string>
    <string name="Erase">Delete Task</string>
    <string name="Save">Save Changes</string>
    <string name="activities">Jog around the park</string>
    <string name="date_3">Jul 25, 2024</string>
    <string name="Details">Description</string>
    <string name="task_name">Task Name</string>
    <string name="activities_1">Morning Jog</string>
    <string name="edit_task">Edit task</string>
    <string name="save_task">Save Task</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="priority">Priority</string>
    <string name="clock_time">9:00 AM</string>
    <string name="date_4">Jul 25, 2024</string>
    <string name="description">Description</string>
    <string name="Nmae">Task Name</string>
    <string name="create_new_task">Create new task</string>

    <string name="app_logo">TaskNest Logo</string>
    <string name="dashboard_title">TaskNest Dashboard</string>
    <string name="loading_time">Loading time...</string>
    <string name="completed_label">Completed</string>
    <string name="pending">Pending</string>
    <string name="todays_tasks">Today\'s Tasks</string>
    <string name="zero">0</string>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
