<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#F8F9FC"
    tools:context=".EditTaskActivity">

    <TextView
        android:id="@+id/edit_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task"
        android:textColor="@color/text_dark_gray"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/etTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_field_background"
        android:padding="16dp"
        android:hint="@string/task_name"
        android:text="@string/activities_1"
        android:fontFamily="@font/poppins"
        android:textColor="@color/text_dark_gray" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_background"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:focusable="false"
        android:text="@string/date_3"
        android:fontFamily="@font/poppins"
        />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field_background"
        android:padding="16dp"
        android:hint="@string/Details"
        android:text="@string/activities"
        android:fontFamily="@font/poppins"
        android:textColor="@color/text_dark_gray"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:gravity="top"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:background="@drawable/button_primary_background"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        />

    <Button
        android:id="@+id/btnDeleteTask"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Erase"
        android:textColor="#F44336"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/button_secondary_background"
        android:layout_marginTop="10dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

</LinearLayout>