<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="128dp"
        android:src="@drawable/shape" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/home"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/input_userEmail"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:background="@drawable/input"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/input_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@drawable/input"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:autofillHints=""/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/button_register"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/transparent_black_ten_percent"
            android:fontFamily="@font/poppins"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/forgot"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:background="@drawable/transparent_black_ten_percent"
            style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>



</LinearLayout>



