<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbarStyle="outsideOverlay"
    android:fillViewport="true"
    android:clipToPadding="false"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_arrow_back_ios_new_24"/>
            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/register"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/input_fullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/full_name"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
        <Spinner
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/black"
            android:popupBackground="@color/white"
            android:layout_marginBottom="15dp"/>


        <EditText
            android:id="@+id/inputMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/number"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_password"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="15dp"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:elevation="5dp"
            android:backgroundTint="@color/buttonBackground"/>


    </LinearLayout>


</ScrollView>
